--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,55 +1,10 @@
 name: Shell Commands
 
- 
-
 on: [push]
 
- 
-
 jobs:
-
   run-shell-command:
-
-    runs-on: [self-hosted]
-
+    runs-on: [self-hosted, Linux]
     steps:
-
       - name: echo a string
-
         run: echo "Hello World"
-
-      - name: multiline script
-
-        run: |
-
-          node -v
-
-          npm -v
-
-      - name: python Command
-
-        run: |
-
-          import platform
-
-          print(platform.processor())
-
-        shell: python
-
-  run-windows-commands:
-
-    runs-on: windows-latest
-
-    needs: [run-shell-command]
-
-    steps:
-
-      - name: Directory PowerShell
-
-        run: Get-Location
-
-      - name: Directory Bash
-
-        run: pwd
-
-        shell: bash
