--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   run-shell-command:
-    runs-on: [ubuntu-latest]
+    runs-on: [self-hosted,ubuntu-latest]
     steps:
       - name: echo a string
         run: echo "Hello World"
